Pulled in data from weather_daily.csv, analyzed and cleaned data.

--- a/notebooks/jonathan.ipynb
+++ b/notebooks/jonathan.ipynb
@@ -36,15 +36,15 @@
   },
   {
    "source": [
-    "## Regional weather site code for the region growing corn, wheat and soybeans\n",
+    "## Regional weather site code and elements for the region growing corn, wheat and soybeans\n",
     "http://http://builder.rcc-acis.org/\n",
     "\n",
     "- Station ID: KOMA\n",
     "    - Location: Omaha Eppley Airfield\n",
     "    - Region: Omaha, Nebrask\n",
     "- Start date: 2000-10-26\n",
-    "- End date: 2020-10-28\n",
     "- Elements: pcpn,avgt (percipitation, average temperature)\n",
+    "- End date: 2020-10-28\n",
     "- Output: csv (comma seperated value)\n"
    ],
    "cell_type": "markdown",
@@ -52,7 +52,23 @@
   },
   {
    "source": [
-    "Full API URL: http://data.rcc-acis.org/StnData?sid=KOMA&sdate=20151001&elems=pcpn,avgt&edate=20201001&output=csv\n"
+    "## Regional Climate Centers (RCC) - Applied Climate Information Systems (ACIS) Documentation\n",
+    "    \n",
+    "- Documentation: http://www.rcc-acis.org/docs_webservices.html\n",
+    "\n",
+    "- API URL: http://data.rcc-acis.org/StnData\n",
+    "\n",
+    "- API URL ELEMENTS:\n",
+    "\n",
+    "    elements = {\n",
+    "        sid=KOMA,\n",
+    "        sdate=20001026,\n",
+    "        elems=pcpn,avgt,\n",
+    "        edate=20201028,\n",
+    "        output=csv\n",
+    "        }\n",
+    "\n",
+    "- Missing data values are returned as \"M\" and traces of precipitation, snowfall or snow depth are returned as \"T\".\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -62,7 +78,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ]
 }
