Produced clean output file, weather_daily_clean.csv.

--- a/data/weather.ipynb
+++ b/data/weather.ipynb
@@ -426,6 +426,13 @@
    ]
   },
   {
+   "source": [
+    "## 3. Compilation Into A Clean Data File\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
