Updated weather notebook to set date index before creating clean csv file.

--- a/data/weather.ipynb
+++ b/data/weather.ipynb
@@ -426,6 +426,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            precipitation  average_temperature\n",
+       "date                                          \n",
+       "2000-10-26         0.0001                 62.0\n",
+       "2000-10-27         0.0000                 54.5\n",
+       "2000-10-28         0.0001                 56.5\n",
+       "2000-10-29         0.6800                 56.5\n",
+       "2000-10-30         0.0000                 60.0"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-10-26</th>\n      <td>0.0001</td>\n      <td>62.0</td>\n    </tr>\n    <tr>\n      <th>2000-10-27</th>\n      <td>0.0000</td>\n      <td>54.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-28</th>\n      <td>0.0001</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-29</th>\n      <td>0.6800</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-30</th>\n      <td>0.0000</td>\n      <td>60.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "# Set index to date and view clean dataframe\n",
+    "clean_weather_data.set_index('date', inplace=True)\n",
+    "clean_weather_data.head()\n"
+   ]
+  },
+  {
    "source": [
     "## 3. Compilation Into A Clean Data File\n"
    ],
@@ -434,10 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create output path\n",
+    "csv_output_path = Path('./clean_data/weather_daily_clean.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write data to csv\n",
+    "clean_weather_data.to_csv(csv_output_path)\n"
+   ]
   }
  ]
 }
