--- a/notebooks/jonathan.ipynb
+++ b/notebooks/jonathan.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 64-bit ('base': conda)",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "name": "Python 3.8.5 64-bit (conda)",
+   "display_name": "Python 3.8.5 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "600c25c12856a842ab64bd468beca1647a20977f2accb2696f130eafa2c53eb8"
@@ -43,8 +43,8 @@
     "    - Location: Omaha Eppley Airfield\n",
     "    - Region: Omaha, Nebrask\n",
     "- Start date: 2000-10-26\n",
-    "- Elements: pcpn,avgt (percipitation, average temperature)\n",
     "- End date: 2020-10-28\n",
+    "- Elements: pcpn,avgt (percipitation, average temperature)\n",
     "- Output: csv (comma seperated value)\n"
    ],
    "cell_type": "markdown",
@@ -63,8 +63,8 @@
     "    elements = {\n",
     "        sid=KOMA,\n",
     "        sdate=20001026,\n",
-    "        elems=pcpn,avgt,\n",
     "        edate=20201028,\n",
+    "        elems=pcpn,avgt,\n",
     "        output=csv\n",
     "        }\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {},
    "outputs": [],
    "source": [
