Updated weather.py to account for passing empty variable strings.

--- a/notebooks/jonathan.ipynb
+++ b/notebooks/jonathan.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000-10-26</td>\n      <td>T</td>\n      <td>62.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000-10-27</td>\n      <td>0.00</td>\n      <td>54.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000-10-28</td>\n      <td>T</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2000-10-29</td>\n      <td>0.68</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2000-10-30</td>\n      <td>0.00</td>\n      <td>60.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 6
     }
    ],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000-10-26</td>\n      <td>T</td>\n      <td>62.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000-10-27</td>\n      <td>0.00</td>\n      <td>54.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000-10-28</td>\n      <td>T</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2000-10-29</td>\n      <td>0.68</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2000-10-30</td>\n      <td>0.00</td>\n      <td>60.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 7
     }
    ],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,18 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace values of 'T' with 0.0001 to represent a value other than 0 or False\n",
+    "# Replace values of 'T' with 0.000000001 to represent a value other than 0 or False\n",
     "# A measurement of precipitation was detected, but not provided\n",
-    "clean_weather_data['precipitation'] = clean_weather_data['precipitation'].replace('T', 0.0001)\n"
+    "clean_weather_data['precipitation'] = clean_weather_data['precipitation'].replace('T', 0.000000001)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-10-26</th>\n      <td>0.0001</td>\n      <td>62.0</td>\n    </tr>\n    <tr>\n      <th>2000-10-27</th>\n      <td>0.0000</td>\n      <td>54.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-28</th>\n      <td>0.0001</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-29</th>\n      <td>0.6800</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-30</th>\n      <td>0.0000</td>\n      <td>60.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 12
     }
    ],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,9 +292,9 @@
     "    # Drop rows with values of 'M'\n",
     "    index_rows = weather_data[weather_data.average_temperature == 'M'].index\n",
     "    clean_weather_data = weather_data.drop(index_rows)\n",
-    "    # Replace values of 'T' with 0.0001 to represent a value other than 0 or False\n",
+    "    # Replace values of 'T' with 0.000000001 to represent a value other than 0 or False\n",
     "    # A measurement of precipitation was detected, but not provided\n",
-    "    clean_weather_data['precipitation'] = clean_weather_data['precipitation'].replace('T', 0.0001)\n",
+    "    clean_weather_data['precipitation'] = clean_weather_data['precipitation'].replace('T', 0.000000001)\n",
     "\n",
     "    # Change date values from object to datetime\n",
     "    clean_weather_data['date'] = pd.to_datetime(clean_weather_data['date'])\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-10-15</th>\n      <td>0.0000</td>\n      <td>47.5</td>\n    </tr>\n    <tr>\n      <th>2020-10-16</th>\n      <td>0.0000</td>\n      <td>46.5</td>\n    </tr>\n    <tr>\n      <th>2020-10-17</th>\n      <td>0.0001</td>\n      <td>56.0</td>\n    </tr>\n    <tr>\n      <th>2020-10-18</th>\n      <td>0.2300</td>\n      <td>38.5</td>\n    </tr>\n    <tr>\n      <th>2020-10-19</th>\n      <td>0.0100</td>\n      <td>40.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 14
     }
    ],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -359,18 +359,18 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-10-26</th>\n      <td>0.0001</td>\n      <td>62.0</td>\n    </tr>\n    <tr>\n      <th>2000-10-27</th>\n      <td>0.0000</td>\n      <td>54.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-28</th>\n      <td>0.0001</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-29</th>\n      <td>0.6800</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-30</th>\n      <td>0.0000</td>\n      <td>60.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 15
     }
    ],
    "source": [
-    "# Testing weather library and method  \n",
+    "# Testing weather library and function\n",
     "returned_data = weather.get_precipitation_and_average_temperature()\n",
     "returned_data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -400,10 +400,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Dictionary of states and station codes\n",
+    "# Can create a connection to a sql db in the future to store this information for data growth\n",
+    "state_station_codes = {\n",
+    "    'NE': ['KOMA', 'KCDR', 'KMCK'],\n",
+    "    'IA': ['KCID', 'KDSM', 'KALO'],\n",
+    "    'IL': ['KORD', 'KMDW', 'KSPI']\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def from_state(state_name='NE', start_date='20201001', end_date='20201005', return_format='df'):\n",
+    "    state_df = {}\n",
+    "    # Check for valid arguments passed in by user\n",
+    "    if state_name == 'NE' or 'IA' or 'IL':\n",
+    "        # Get station ids for selected state\n",
+    "        list_of_stations = state_station_codes[state_name]\n",
+    "\n",
+    "        # Get station data for each station\n",
+    "        for station in list_of_stations:\n",
+    "            list_of_station_dataframes = weather.get_precipitation_and_average_temperature(station, start_date, end_date)\n",
+    "        # Add all station data into one dataframe\n",
+    "        for station_data in list_of_station_dataframes:\n",
+    "            print(station_data)\n",
+    "\n",
+    "        # Calculate average of combine data values\n",
+    "        \n",
+    "        \n",
+    "        # Return state dateframe\n",
+    "        if return_format == 'df':\n",
+    "            return state_df\n",
+    "\n",
+    "        # Output to csv file\n",
+    "        elif return_format == 'csv':\n",
+    "            # Create output path and write data to csv\n",
+    "            csv_output_path = Path('./clean_data/state_historical_weather.csv')\n",
+    "            state_df.to_csv(csv_output_path)\n",
+    "        else:\n",
+    "            # Return message that return format not found\n",
+    "            return 'Return format specified not found.  Pass in df or csv as a string.'\n",
+    "    else: \n",
+    "        # Return message that state not found\n",
+    "        return 'State not found.  Pass in NE, IA or IL as a string.'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "precipitation\naverage_temperature\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "response = from_state('NE', '20201001', '20201005','df')\n",
+    "response"
+   ]
+  },
+  {
+   "source": [
+    "# Notes to ask the group and for us to think about:\n",
+    "1. Is there an existing weather.py library on the internet\n",
+    "2. README.md, offer a template that I use to start\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
