added wasde file test script and saved down test time range

--- a/notebooks/jordan.ipynb
+++ b/notebooks/jordan.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,18 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#assign usda api key\n",
     "load_dotenv()\n",
-    "usda_api_key = os.getenv('usda_api_key')"
+    "wasde_api_key = os.getenv('wasde_api_key')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,59 @@
     "state = 'NE'\n",
     "year = 2020\n",
     "data_columns = ['commodity_desc', 'statisticcat_desc', 'util_practice_desc', 'unit_desc', 'state_alpha', 'year', 'freq_desc', 'Value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<Response [401]>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "wasde_url = f'https://usda.library.cornell.edu/api/v1/agency/findAll'\n",
+    "\n",
+    "wasde_data = requests.get(wasde_url, wasde_api_key).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "login_info = {'email' : 'jordan.m.gross@gmail.com', 'password' : 'Swoosh!4'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<Response [404]>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "requests.get('https://usda.library.cornell.edu/user_token', headers = login_info)\n",
+    "\n",
+    "# requests.get('https://usda.library.cornell.edu/user_token')"
    ]
   },
   {
