--- a/notebooks/jordan.ipynb
+++ b/notebooks/jordan.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,91 +46,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#assign usda api key\n",
-    "load_dotenv()\n",
-    "wasde_api_key = os.getenv('wasde_api_key')"
+    "login_info = {\"auth[email]\":\"jordan.m.gross@gmail.com\",\"auth[password]\":\"Swoosh!4\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#assign paramenter variables\n",
-    "# commodity_dict = {'CORN' : ['PRODUCTION', 'STOCKS'], 'SOYBEANS' : ['PRODUCTION', 'STOCKS']}\n",
-    "\n",
-    "commodity = 'CORN'\n",
-    "statistic = 'PRODCUTION'\n",
-    "data_level = 'STATE'\n",
-    "state = 'NE'\n",
-    "year = 2020\n",
-    "data_columns = ['commodity_desc', 'statisticcat_desc', 'util_practice_desc', 'unit_desc', 'state_alpha', 'year', 'freq_desc', 'Value']"
+    "token = requests.post('https://usda.library.cornell.edu/user_token', data = login_info).json()\n",
+    "token = token['jwt']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<Response [401]>"
+       "{'id': 'dv140g79v',\n",
+       " 'files': ['https://downloads.usda.library.cornell.edu/usda-esmis/files/3t945q76s/dv140g79v/k0698x33z/latest.pdf',\n",
+       "  'https://downloads.usda.library.cornell.edu/usda-esmis/files/3t945q76s/dv140g79v/3f462v46c/latest.xml',\n",
+       "  'https://downloads.usda.library.cornell.edu/usda-esmis/files/3t945q76s/dv140g79v/d504s899k/latest.xls',\n",
+       "  'https://downloads.usda.library.cornell.edu/usda-esmis/files/3t945q76s/dv140g79v/41688643b/latest.txt'],\n",
+       " 'title': ['World Agricultural Supply and Demand Estimates'],\n",
+       " 'date_uploaded': '2020-09-11T16:04:07Z',\n",
+       " 'date_modified': '2020-09-11T16:04:08Z',\n",
+       " 'release_datetime': '2020-09-11',\n",
+       " 'identifier': ['wasde'],\n",
+       " 'agency_acronym': ['WAOB']}"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 112
     }
    ],
    "source": [
-    "wasde_url = f'https://usda.library.cornell.edu/api/v1/agency/findAll'\n",
-    "\n",
-    "wasde_data = requests.get(wasde_url, wasde_api_key).json()"
+    "files = requests.get('https://usda.library.cornell.edu/api/v1/release/findByIdentifier/wasde?latest=false&start_date=2020-01-01&end_date=2020-09-30', headers = ({'Authorization' :  f'Bearer {token}'})).json()\n",
+    "files[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
-    "login_info = {'email' : 'jordan.m.gross@gmail.com', 'password' : 'Swoosh!4'}"
+    "for i in files:\n",
+    "    for file in i['files']:\n",
+    "        if '.xls' in file:\n",
+    "            xls_url = file\n",
+    "        else:\n",
+    "            next\n",
+    "    \n",
+    "    xls_data = requests.get(xls_url)\n",
+    "\n",
+    "    with open(f'../data/raw_data/wasde_data/wasde_{i[\"release_datetime\"]}.xls', 'wb') as output:\n",
+    "        output.write(xls_data.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(file_path)):\n",
+    "    if '.xls' in file_path[i]:\n",
+    "        xls_url = file_path[i]\n",
+    "    else:\n",
+    "        next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<Response [404]>"
+       "'https://downloads.usda.library.cornell.edu/usda-esmis/files/3t945q76s/dv140g79v/d504s899k/latest.xls'"
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 123
     }
    ],
    "source": [
-    "requests.get('https://usda.library.cornell.edu/user_token', headers = login_info)\n",
-    "\n",
-    "# requests.get('https://usda.library.cornell.edu/user_token')"
+    "xls_url"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
