Updated weather.py to also remove 'M' values from precipitation column.

--- a/data/weather.ipynb
+++ b/data/weather.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 64-bit ('base': conda)",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "name": "Python 3.8.5 64-bit (conda)",
+   "display_name": "Python 3.8.5 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "600c25c12856a842ab64bd468beca1647a20977f2accb2696f130eafa2c53eb8"
