--- a/notebooks/carolina.ipynb
+++ b/notebooks/carolina.ipynb
@@ -299,22 +299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   year month  average_temperature\n",
-       "0  2000   oct            58.833333\n",
-       "1  2000   nov            33.416667\n",
-       "2  2000   dec            15.548387"
+       "  month       2000\n",
+       "0   oct  58.833333\n",
+       "1   nov  33.416667\n",
+       "2   dec  15.548387"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>month</th>\n      <th>average_temperature</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000</td>\n      <td>oct</td>\n      <td>58.833333</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000</td>\n      <td>nov</td>\n      <td>33.416667</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000</td>\n      <td>dec</td>\n      <td>15.548387</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>2000</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>oct</td>\n      <td>58.833333</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>nov</td>\n      <td>33.416667</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>dec</td>\n      <td>15.548387</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 30
     }
    ],
    "source": [
@@ -324,27 +324,30 @@
     "select_year['month'] = select_year['month'].replace([10],'oct')\n",
     "select_year['month'] = select_year['month'].replace([11],'nov')\n",
     "select_year['month'] = select_year['month'].replace([12],'dec')\n",
+    "\n",
+    "# Rename column average_temperature with 2000\n",
+    "select_year.rename(columns={'average_temperature': '2000'}, inplace=True)\n",
+    "select_year.drop(columns='year',inplace = True)\n",
     "select_year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                           0        1        2\n",
-       "year                    2000     2000     2000\n",
-       "month                    oct      nov      dec\n",
-       "average_temperature  58.8333  33.4167  15.5484"
+       "             0        1        2\n",
+       "month      oct      nov      dec\n",
+       "2000   58.8333  33.4167  15.5484"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>year</th>\n      <td>2000</td>\n      <td>2000</td>\n      <td>2000</td>\n    </tr>\n    <tr>\n      <th>month</th>\n      <td>oct</td>\n      <td>nov</td>\n      <td>dec</td>\n    </tr>\n    <tr>\n      <th>average_temperature</th>\n      <td>58.8333</td>\n      <td>33.4167</td>\n      <td>15.5484</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>month</th>\n      <td>oct</td>\n      <td>nov</td>\n      <td>dec</td>\n    </tr>\n    <tr>\n      <th>2000</th>\n      <td>58.8333</td>\n      <td>33.4167</td>\n      <td>15.5484</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 53
     }
    ],
    "source": [
@@ -354,12 +357,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0  year      oct      nov      dec\n",
+       "1  2000  58.8333  33.4167  15.5484"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>oct</th>\n      <th>nov</th>\n      <th>dec</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>2000</td>\n      <td>58.8333</td>\n      <td>33.4167</td>\n      <td>15.5484</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
+   "source": [
+    "transposed_df.reset_index(inplace=True)\n",
+    "transposed_df['index'] = transposed_df['index'].replace(['month'],'year')\n",
+    "transposed_df.columns = transposed_df.iloc[0]\n",
+    "transposed_df.drop(index=0, inplace=True)\n",
+    "transposed_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# drop row year"
-   ]
+   "source": []
   }
  ]
 }
