function for temp_db

--- a/notebooks/carolina.ipynb
+++ b/notebooks/carolina.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 96
     }
    ],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000-10-26</td>\n      <td>0.0001</td>\n      <td>62.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000-10-27</td>\n      <td>0.0000</td>\n      <td>54.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000-10-28</td>\n      <td>0.0001</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2000-10-29</td>\n      <td>0.6800</td>\n      <td>56.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2000-10-30</td>\n      <td>0.0000</td>\n      <td>60.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 97
     }
    ],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n      <th>day</th>\n      <th>month</th>\n      <th>year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000-10-26</td>\n      <td>0.0001</td>\n      <td>62.0</td>\n      <td>26</td>\n      <td>10</td>\n      <td>2000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000-10-27</td>\n      <td>0.0000</td>\n      <td>54.5</td>\n      <td>27</td>\n      <td>10</td>\n      <td>2000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000-10-28</td>\n      <td>0.0001</td>\n      <td>56.5</td>\n      <td>28</td>\n      <td>10</td>\n      <td>2000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2000-10-29</td>\n      <td>0.6800</td>\n      <td>56.5</td>\n      <td>29</td>\n      <td>10</td>\n      <td>2000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2000-10-30</td>\n      <td>0.0000</td>\n      <td>60.0</td>\n      <td>30</td>\n      <td>10</td>\n      <td>2000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 98
     }
    ],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th>month</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">2000</th>\n      <th>10</th>\n      <td>0.113383</td>\n      <td>58.833333</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>0.109020</td>\n      <td>33.416667</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>0.030674</td>\n      <td>15.548387</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">2001</th>\n      <th>1</th>\n      <td>0.051948</td>\n      <td>26.580645</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.054661</td>\n      <td>21.392857</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 99
     }
    ],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>month</th>\n      <th>average_temperature</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000</td>\n      <td>10</td>\n      <td>58.833333</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000</td>\n      <td>11</td>\n      <td>33.416667</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000</td>\n      <td>12</td>\n      <td>15.548387</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2001</td>\n      <td>1</td>\n      <td>26.580645</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2001</td>\n      <td>2</td>\n      <td>21.392857</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 84
     }
    ],
    "source": [
@@ -379,6 +379,56 @@
     "transposed_df.columns = transposed_df.iloc[0]\n",
     "transposed_df.drop(index=0, inplace=True)\n",
     "transposed_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function so that it reconfigures all the temperatures in one run\n",
+    "year = 2001\n",
+    "df = monthly_temp\n",
+    "\n",
+    "def my_sql_temp (year, df):\n",
+    "    select_year = df.loc[df['year']==year]\n",
+    "    #print (year)\n",
+    "    # rename row months from numeric to alphabetic\n",
+    "    select_year['month'] = select_year['month'].replace([1],'jan')\n",
+    "    select_year['month'] = select_year['month'].replace([2],'feb')\n",
+    "    select_year['month'] = select_year['month'].replace([3],'mar')\n",
+    "    select_year['month'] = select_year['month'].replace([4],'apr')\n",
+    "    select_year['month'] = select_year['month'].replace([5],'may')\n",
+    "    select_year['month'] = select_year['month'].replace([6],'jun')\n",
+    "    select_year['month'] = select_year['month'].replace([7],'jul')\n",
+    "    select_year['month'] = select_year['month'].replace([8],'aug')\n",
+    "    select_year['month'] = select_year['month'].replace([9],'sep')\n",
+    "    select_year['month'] = select_year['month'].replace([10],'oct')\n",
+    "    select_year['month'] = select_year['month'].replace([11],'nov')\n",
+    "    select_year['month'] = select_year['month'].replace([12],'dec')\n",
+    "    select_year.rename(columns={'average_temperature': f'{year}'}, inplace=True)\n",
+    "    new_data_year = select_year.drop(columns='year')\n",
+    "\n",
+    "    print (new_data_year)\n",
+    "#select_year.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   month       2001\n3    jan  26.580645\n4    feb  21.392857\n5    mar  34.919355\n6    apr  55.500000\n7    may  63.435484\n8    jun  71.600000\n9    jul  78.903226\n10   aug  75.709677\n11   sep  64.983333\n12   oct  53.483871\n13   nov  49.366667\n14   dec  32.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_sql_temp (year,df)"
    ]
   },
   {
