--- a/notebooks/carolina.ipynb
+++ b/notebooks/carolina.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -449,121 +449,101 @@
      "text": [
       "0  year    oct    nov    dec\n",
       "1  2000  58.83  33.42  15.55\n",
-      "None\n",
       "0  year    jan    feb    mar   apr    may   jun   jul    aug    sep    oct  \\\n",
       "1  2001  26.58  21.39  34.92  55.5  63.44  71.6  78.9  75.71  64.98  53.48   \n",
       "\n",
       "0    nov dec  \n",
       "1  49.37  32  \n",
-      "None\n",
       "0  year    jan    feb mar    apr    may    jun   jul    aug    sep    oct  \\\n",
       "1  2002  30.23  32.05  33  52.37  59.56  77.27  81.1  74.92  68.13  47.47   \n",
       "\n",
       "0    nov    dec  \n",
       "1  37.57  32.03  \n",
-      "None\n",
       "0  year    jan    feb    mar   apr    may   jun    jul    aug    sep    oct  \\\n",
       "1  2003  22.76  23.71  39.58  53.5  59.61  69.1  78.35  78.02  63.32  55.31   \n",
       "\n",
       "0    nov    dec  \n",
       "1  37.87  30.21  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr   may    jun    jul    aug    sep    oct  \\\n",
       "1  2004  21.05  24.91  43.52  54.03  63.9  68.68  73.08  70.02  70.35  54.79   \n",
       "\n",
       "0   nov    dec  \n",
       "1  42.1  29.48  \n",
-      "None\n",
       "0  year    jan    feb    mar   apr    may    jun    jul    aug   sep    oct  \\\n",
       "1  2005  20.94  32.89  40.63  55.5  61.81  75.53  79.68  75.05  71.1  54.97   \n",
       "\n",
       "0    nov    dec  \n",
       "1  42.55  24.39  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2006  36.68  29.68  39.34  56.92  64.24  74.63  79.81  74.45  62.28  49.94   \n",
       "\n",
       "0    nov    dec  \n",
       "1  39.83  33.19  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr   may    jun    jul    aug    sep    oct  \\\n",
       "1  2007  22.23  21.25  46.32  49.85  66.5  72.85  78.48  78.16  66.92  56.84   \n",
       "\n",
       "0    nov    dec  \n",
       "1  38.65  22.76  \n",
-      "None\n",
       "0  year   jan    feb    mar    apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2008  19.9  22.03  36.29  47.48  60.11  71.82  77.24  75.81  65.37  54.65   \n",
       "\n",
       "0    nov    dec  \n",
       "1  38.83  22.23  \n",
-      "None\n",
       "0  year    jan   feb    mar    apr    may   jun    jul    aug   sep    oct  \\\n",
       "1  2009  20.76  29.8  39.39  49.97  63.69  71.7  71.89  71.71  65.5  46.77   \n",
       "\n",
       "0    nov    dec  \n",
       "1  45.72  20.35  \n",
-      "None\n",
       "0  year    jan    feb    mar   apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2010  16.71  20.68  40.79  57.3  61.87  74.23  78.15  78.98  66.88  57.26   \n",
       "\n",
       "0    nov    dec  \n",
       "1  39.85  24.63  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may   jun    jul    aug    sep    oct  \\\n",
       "1  2011  18.31  26.11  39.26  51.68  62.53  73.3  81.94  76.44  63.77  57.06   \n",
       "\n",
       "0    nov    dec  \n",
       "1  41.52  30.16  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2012  30.97  31.38  56.42  56.98  68.39  76.07  84.84  75.69  65.33  51.06   \n",
       "\n",
       "0    nov    dec  \n",
       "1  42.88  29.18  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr may    jun    jul    aug    sep    oct  \\\n",
       "1  2013  25.63  29.36  34.24  47.33  62  71.97  76.26  76.82  71.03  52.94   \n",
       "\n",
       "0    nov    dec  \n",
       "1  37.45  22.24  \n",
-      "None\n",
       "0  year    jan    feb    mar   apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2014  20.89  21.73  36.26  51.8  64.31  73.52  73.68  75.44  66.28  55.26   \n",
       "\n",
       "0    nov    dec  \n",
       "1  33.95  31.48  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2015  27.79  20.75  43.69  54.22  61.65  73.43  76.97  73.16  71.62  57.42   \n",
       "\n",
       "0    nov    dec  \n",
       "1  45.15  34.11  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may    jun    jul    aug   sep    oct  \\\n",
       "1  2016  24.27  34.19  47.47  54.98  63.06  78.67  77.76  75.94  70.8  58.94   \n",
       "\n",
       "0    nov    dec  \n",
       "1  47.25  26.94  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may   jun    jul    aug    sep    oct  \\\n",
       "1  2017  27.66  37.71  43.32  54.35  63.06  75.7  80.13  72.55  70.63  55.29   \n",
       "\n",
       "0    nov    dec  \n",
       "1  40.67  27.39  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may    jun    jul    aug    sep    oct  \\\n",
       "1  2018  23.29  23.98  40.34  44.92  70.63  77.55  77.45  76.02  69.43  51.63   \n",
       "\n",
       "0    nov    dec  \n",
       "1  33.72  29.65  \n",
-      "None\n",
       "0  year    jan    feb    mar    apr    may   jun    jul    aug    sep    oct  \\\n",
       "1  2019  24.52  17.55  35.55  54.88  61.95  74.2  78.63  75.44  73.58  48.95   \n",
       "\n",
       "0    nov    dec  \n",
-      "1  37.37  32.27  \n",
-      "None\n"
+      "1  37.37  32.27  \n"
      ]
     }
    ],
@@ -573,10 +553,16 @@
     "df = monthly_temp\n",
     "\n",
     "year_counter = 0\n",
+    "output_path = Path('../data/clean_data/state_temp.csv')\n",
     "for int in range (year_ini,year_end):\n",
     "    #print (int)\n",
     "    year_data = my_sql_temp (int,monthly_temp)\n",
-    "    print (year_data)"
+    "    #print (year_data)\n",
+    "    export_df = pd.DataFrame(year_data)\n",
+    "    export_df.to_csv(output_path)\n",
+    "    #with open(output_path,'w') as csvfile:\n",
+    "     #   csvwriter = csv.writer(csvfile)\n",
+    "      #  csvwriter.writerow(year_data)"
    ]
   },
   {
