Updated weather.py functions to accept yyyy-mm-dd date formats and output state postal abbreviation in csv file names.

--- a/data/weather.ipynb
+++ b/data/weather.ipynb
@@ -501,6 +501,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            precipitation  average_temperature\n",
+       "date                                          \n",
+       "2000-10-26         0.0000                 55.5\n",
+       "2000-10-27         0.0167                 51.5\n",
+       "2000-10-28         0.6767                 58.0\n",
+       "2000-10-29         0.5800                 52.2\n",
+       "2000-10-30         0.0000                 55.7\n",
+       "...                   ...                  ...\n",
+       "2020-10-24         0.0000                 28.3\n",
+       "2020-10-25         0.0234                 22.3\n",
+       "2020-10-26         0.0433                 16.0\n",
+       "2020-10-27         0.0000                 21.8\n",
+       "2020-10-28         0.0000                 37.7\n",
+       "\n",
+       "[7244 rows x 2 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-10-26</th>\n      <td>0.0000</td>\n      <td>55.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-27</th>\n      <td>0.0167</td>\n      <td>51.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-28</th>\n      <td>0.6767</td>\n      <td>58.0</td>\n    </tr>\n    <tr>\n      <th>2000-10-29</th>\n      <td>0.5800</td>\n      <td>52.2</td>\n    </tr>\n    <tr>\n      <th>2000-10-30</th>\n      <td>0.0000</td>\n      <td>55.7</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-10-24</th>\n      <td>0.0000</td>\n      <td>28.3</td>\n    </tr>\n    <tr>\n      <th>2020-10-25</th>\n      <td>0.0234</td>\n      <td>22.3</td>\n    </tr>\n    <tr>\n      <th>2020-10-26</th>\n      <td>0.0433</td>\n      <td>16.0</td>\n    </tr>\n    <tr>\n      <th>2020-10-27</th>\n      <td>0.0000</td>\n      <td>21.8</td>\n    </tr>\n    <tr>\n      <th>2020-10-28</th>\n      <td>0.0000</td>\n      <td>37.7</td>\n    </tr>\n  </tbody>\n</table>\n<p>7244 rows × 2 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "# Can use 'yyyymmdd' or 'yyyy-mm-dd' date format to data\n",
+    "response = weather.for_state('NE', '2000-10-26', '2020-10-28','df')\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# .for_state() will now format csv file name with state postal abbreviation\n",
+    "# Exampe: \n",
+    "response = weather.for_state('IL', '2000-10-26', '2020-10-28','csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
